<resources>

    <string name="app_name" translatable="false">Card Notes</string>

    <string name="note_detail_transition_name" translatable="false">
        note_detail_transition_name
    </string>


    <string name="select_items">Select items</string>
    <string name="title">Title</string>
    <string name="write_here_your_note">Write here your note</string>
    <string name="search_by_title_or_content">Search by title or content</string>
    <string name="new_folder">New folder</string>
    <string name="all_folders">All folders</string>
    <string name="create_folder">Create folder</string>
    <string name="cancel">Cancel</string>
    <string name="move_to">Move to</string>
    <string name="no_folder">No folder</string>
    <string name="undo">Undo</string>
    <string name="item_moved">%s has been moved to %s</string>
    <string name="delete_note">Delete note</string>
    <string name="do_you_want_to_delete_this_note">
        Do you want to delete this note?
    </string>

    <string name="items_moved">
        %d items moved to %s
    </string>

    <string name="folder_with_the_same_name_already_exists">
        Folder with the same name already exists</string>

    <string name="folder_name_must_not_be_empty">
        Folder name must not be empty
    </string>

    <string name="delete_notes">Delete notes</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_folder">Delete folder</string>

    <string name="do_you_want_to_delete_folder_and_all_the_notes_in_it">
        Do you want to delete folder and all the notes in it?
    </string>

    <string name="no_notes_here">
        No notes here
    </string>

    <string name="list_view">List view</string>
    <string name="grid_view">Grid view</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="new_first">New first</string>
    <string name="old_first">Old first</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="choose_folder">Choose folder</string>
    <string name="close">Close</string>
    <string name="close_edit_mode">Close edit mode</string>

    <string name="close_edit">Close edit</string>

    <string name="do_you_want_to_close_and_decline_all_changes">
        Close and decline all changes?
    </string>

    <string name="rename_folder">
        Rename folder
    </string>

    <plurals name="selected_items">
        <item quantity="one">%d selected item</item>
        <item quantity="other">%d selected items</item>
    </plurals>

    <plurals name="delete_items">
        <item quantity="one">Do you want to delete %d item?</item>
        <item quantity="other">Do you want to delete %d items?</item>
    </plurals>


    <string name="accept">Аccept</string>
    <string name="search_notes">Search notes</string>
    <string name="add_note_or_folder">Add note or folder</string>
    <string name="folder">Folder</string>
    <string name="nothing_here">Nothing here</string>
    <string name="item_options">Item options</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="add_folder">Add folder</string>
    <string name="search_note_or_folder">Search note or folder</string>
</resources>